    CPPUNIT_HAVE_NAMESPACES.

  * include/cppunit/tools/StringTools.h: use CPPUNIT_WRAP_COLUMN as default
    parameter value for wrap().

  * include/cppunit/*/*.h:
  * src/cppunit/*.cpp: changed all CppUnit namespace declaration to use
    macros CPPUNIT_NS_BEGIN and CPPUNIT_NS_END. Also, changed reference
    to CppUnit namespace (essentially in macros) using CPPUNIT_NS macro.

2002-07-11 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/Portability.h: added macro CPPUNIT_CONST_CAST.

  * src/cppunit/Exception.cpp:
  * src/cppunit/Test.cpp:
  * examples/cppunittest/MockTestCase.cpp: replaced usage of const_cast with
    CPPUNIT_CONST_CAST.

  * include/cppunit/Test.h:
  * src/cppunit/Test.cpp: made findTestPath(), findTest() and resolvePath()
    const methods.

2002-07-10 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/extensions/AutoRegisterSuite.h:
  * include/cppunit/extensions/Orthodox.h:
  * include/cppunit/extensions/TestSuiteBuilder.h:
  * include/cppunit/extensions/TestSuiteFactory.h:
  * include/cppunit/TestCaller.h:
  * examples/hierarchy/BoardGameTest.h:
  * examples/hierarchy/ChessTest.h: replaced usage of 'typename' in template
    declaration with 'class'.

  * include/cppunit/ui/text/TestRunner.h:
  * src/cppunit/TextTestRunner.cpp: updated to use the generic TestRunner.
    Removed methods runTestByName() and runTest(). Inherits 
    CppUnit::TestRunner.

  * include/cppunit/extensions/TestSuiteBuilder.h: removed templatized method
    addTestCallerForException(). It is no longer used since release 1.9.8.

  * examples/cppunittest/MockTestCase.h
  * examples/cppunittest/MockTestCase.cpp: removed the usage of 'mutable'
    keyword.

2002-07-04 Baptiste Lepilleur <gaiacrtn@free.fr>

  * src/msvc6/DSPlugIn/DSPlugIn.dsp: updated so that only the release
    configuration get copied to the lib/ directory.

2002-07-03 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/XmlOutputter.h: fixed XmlOutputter constructed default