@@ -481,13 +481,16 @@ INCLUDE_PATH          =
 # or name=definition (no spaces). If the definition and the = are 
 # omitted =1 is assumed. 
 
-PREDEFINED            = CPPUNIT_HAVE_CPP_SOURCE_ANNOTATION
+PREDEFINED             = CPPUNIT_HAVE_CPP_SOURCE_ANNOTATION \
+                         CPPUNIT_HAVE_NAMESPACES=1 \
+                         CPPUNIT_NS_BEGIN="namespace CppUnit {" \
+                         CPPUNIT_NS_END=}
 
 # If the EXPAND_ONLY_PREDEF and MACRO_EXPANSION tags are both set to YES 
 # then the macro expansion is limited to the macros specified with the 
 # PREDEFINED tag. 
 
-EXPAND_ONLY_PREDEF    = NO
+EXPAND_ONLY_PREDEF    = YES
 
 #---------------------------------------------------------------------------
 # Configuration::addtions related to external references   
